--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 
-	<!-- Jquery -->
-	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<!-- Bootstrap Modal -->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 	<!-- Material Design Lite -->
 	<link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.grey-blue.min.css" />
 	<script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+
 	<!-- CSS and styles -->
 	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/index.css" media="screen,projection">
-
-	<!-- Material Design Modal -->
-    <script src="js/mdl-jquery-modal-dialog.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/modal.css">
 
 </head>
 <body data-ng-controller="TodoCtrl" data-ng-init="init()">
@@ -50,13 +51,40 @@
 				</li>
 			</ul>
 
-			<button id="add-frame" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored add-frame-btn">
+			<button id="add-frame" class="modal__trigger mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored add-frame-btn" data-toggle="modal" data-target="#todo-modal">
 			  <i class="material-icons">add</i>
 			</button>
 		</section>
 	</div>
 
-	<!-- TODO: implement console>
+
+	<div class="modal fade" id="todo-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel-2">
+		<div class="modal-dialog">
+			<!-- Modal content-->
+			<div class="modal-content">
+				<form ng-submit="addItem()">
+			  		<div class="modal-header">
+			    		<button type="button" class="close" data-dismiss="modal">&times;</button>
+			    		<h4 class="modal-title" id="myModalLabel-2">Add TODO</h4>
+			  		</div>
+			  		<div class="modal-body">
+	         			<div class="mdl-textfield mdl-js-textfield"> 
+	            			<input class="mdl-textfield__input" type="text" id="input-frame" ng-model="itemText" required>
+	                			<label class="mdl-textfield__label" for="input-frame">
+	                				What are you about to do?
+	                			</label>
+	         			</div>
+			  		</div>
+			  		<div class="modal-footer">
+			    		<button type="button" class="mdl-button mdl-js-button mdl-js-ripple-effect" data-dismiss="modal">Close</button>
+			    		
+			    		<input class="mdl-button mdl-js-button mdl-js-ripple-effect" type="submit" value="Add">
+			  		</div>
+		  		</form>
+			</div>
+		</div>
+	</div>
+	<!--
 			<div class="debug-div">
 				<h3>Debugging Area</h3>
 				<p>In order to know what is happening here, the underlying model is represented below:</p>
@@ -69,26 +97,6 @@
 	<!-- JavaScript -->	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 	<script type="text/javascript" src="js/controller.js"></script>
-
-	<!-- Test: still work on the modal frame -->
-	<script>
-    /*  HERE  */
-    $('#add-frame').click(function () {
-        showDialog({
-            title: 'Add task',
-            negative: {
-                title: 'Nope'
-            },
-            positive: {
-                title: 'Add',
-                onClick: function (e) {
-                    alert('Action performed!');
-                }
-            }
-        });
-    });
-</script>
-
 
 </body>
 </html>
