--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>TODO list</title>
 	<meta charset="UTF-8">
+	<meta name="theme-color" content="#616161" />
 	<link rel="icon" type="image/png" href="img/icon.png">
 
 	<!--Let browser know website is optimized for mobile-->
